// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiButtonGroup Baseline is rendered 1`] = `
<div
  class="kuiButtonGroup"
  role="group"
/>
`;

exports[`KuiButtonGroup Props children is rendered 1`] = `
<div
  class="kuiButtonGroup"
  role="group"
>
  Hello
</div>
`;

exports[`KuiButtonGroup Props isUnited renders the united class 1`] = `
<div
  class="kuiButtonGroup kuiButtonGroup--united"
  role="group"
/>
`;
